--- a/storage/hostpath/volume-pod.yaml
+++ b/storage/hostpath/volume-pod.yaml
@@ -22,6 +22,8 @@ spec:
       mountPath: /html
   volumes:
   - name: pv-selector-example
-    persistentVolumeClaim: 
+    persistentVolumeClaim:
       claimName: pvc-selector-example
+  nodeSelector:
+    hostpath: "true"
 
